--- a/T3kUpgrade/dialog.ui
+++ b/T3kUpgrade/dialog.ui
@@ -54,7 +54,7 @@
        <x>250</x>
        <y>10</y>
        <width>231</width>
-       <height>21</height>
+       <height>31</height>
       </rect>
      </property>
      <property name="frameShape">
@@ -77,10 +77,13 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>30</y>
+       <y>40</y>
        <width>231</width>
-       <height>191</height>
+       <height>181</height>
       </rect>
+     </property>
+     <property name="horizontalScrollBarPolicy">
+      <enum>Qt::ScrollBarAlwaysOff</enum>
      </property>
      <property name="undoRedoEnabled">
       <bool>false</bool>
@@ -109,10 +112,13 @@
      <property name="geometry">
       <rect>
        <x>250</x>
-       <y>30</y>
+       <y>40</y>
        <width>231</width>
-       <height>191</height>
+       <height>181</height>
       </rect>
+     </property>
+     <property name="horizontalScrollBarPolicy">
+      <enum>Qt::ScrollBarAlwaysOff</enum>
      </property>
      <property name="undoRedoEnabled">
       <bool>false</bool>
@@ -127,7 +133,7 @@
        <x>10</x>
        <y>10</y>
        <width>231</width>
-       <height>21</height>
+       <height>31</height>
       </rect>
      </property>
      <property name="frameShape">
@@ -144,14 +150,14 @@
      </property>
     </widget>
    </widget>
-   <widget class="QWidget" name="pageProgress" native="true">
+   <widget class="QWidget" name="pageProgress">
     <widget class="QLabel" name="labelProgress">
      <property name="geometry">
       <rect>
        <x>10</x>
        <y>10</y>
        <width>471</width>
-       <height>21</height>
+       <height>31</height>
       </rect>
      </property>
      <property name="frameShape">
@@ -174,10 +180,13 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>30</y>
+       <y>40</y>
        <width>471</width>
-       <height>171</height>
+       <height>161</height>
       </rect>
+     </property>
+     <property name="horizontalScrollBarPolicy">
+      <enum>Qt::ScrollBarAlwaysOff</enum>
      </property>
      <property name="undoRedoEnabled">
       <bool>false</bool>
