--- a/T3kUpgrade/dialog.ui
+++ b/T3kUpgrade/dialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>510</width>
-    <height>315</height>
+    <height>422</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -35,7 +35,7 @@
      <x>10</x>
      <y>10</y>
      <width>491</width>
-     <height>291</height>
+     <height>401</height>
     </rect>
    </property>
    <property name="frameShape">
@@ -45,15 +45,15 @@
     <enum>QFrame::Raised</enum>
    </property>
    <property name="currentIndex">
-    <number>1</number>
+    <number>0</number>
    </property>
    <widget class="QWidget" name="pageInformation">
     <widget class="QLabel" name="labelFirmwareInformation">
      <property name="geometry">
       <rect>
-       <x>250</x>
-       <y>10</y>
-       <width>231</width>
+       <x>10</x>
+       <y>180</y>
+       <width>471</width>
        <height>31</height>
       </rect>
      </property>
@@ -72,14 +72,14 @@
     </widget>
     <widget class="QTextEdit" name="textEditSensorInformation">
      <property name="enabled">
-      <bool>true</bool>
+      <bool>false</bool>
      </property>
      <property name="geometry">
       <rect>
        <x>10</x>
        <y>40</y>
-       <width>231</width>
-       <height>181</height>
+       <width>471</width>
+       <height>131</height>
       </rect>
      </property>
      <property name="horizontalScrollBarPolicy">
@@ -96,7 +96,7 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>240</y>
+       <y>350</y>
        <width>471</width>
        <height>41</height>
       </rect>
@@ -111,10 +111,10 @@
      </property>
      <property name="geometry">
       <rect>
-       <x>250</x>
-       <y>40</y>
-       <width>231</width>
-       <height>181</height>
+       <x>10</x>
+       <y>210</y>
+       <width>471</width>
+       <height>131</height>
       </rect>
      </property>
      <property name="horizontalScrollBarPolicy">
@@ -132,7 +132,7 @@
       <rect>
        <x>10</x>
        <y>10</y>
-       <width>231</width>
+       <width>471</width>
        <height>31</height>
       </rect>
      </property>
@@ -182,7 +182,7 @@
        <x>10</x>
        <y>40</y>
        <width>471</width>
-       <height>161</height>
+       <height>261</height>
       </rect>
      </property>
      <property name="horizontalScrollBarPolicy">
@@ -199,9 +199,9 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>200</y>
+       <y>300</y>
        <width>471</width>
-       <height>23</height>
+       <height>31</height>
       </rect>
      </property>
      <property name="value">
@@ -215,7 +215,7 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>240</y>
+       <y>350</y>
        <width>471</width>
        <height>41</height>
       </rect>
