--- a/T3kUpgrade/T3kUpgrade.qrc
+++ b/T3kUpgrade/T3kUpgrade.qrc
@@ -3,5 +3,9 @@
         <file>resources/T3kUpgrade.ico</file>
         <file>resources/T3kUpgrade.png</file>
         <file>resources/T3kUpgrade.icns</file>
+        <file>resources/package.png</file>
+        <file>resources/usb.png</file>
+        <file>resources/brief.png</file>
+        <file>resources/download.png</file>
     </qresource>
 </RCC>
