--- a/T3kUpgrade/briefing_dialog.ui
+++ b/T3kUpgrade/briefing_dialog.ui
@@ -93,8 +93,9 @@ p, li { white-space: pre-wrap; }
 	font-weight: bold;
     border-style: solid;
     border-width: 1px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+	padding-bottom: 2px;
 }</string>
    </property>
    <property name="text">
