--- a/T3kCfgFE/dialog.ui
+++ b/T3kCfgFE/dialog.ui
@@ -1,20 +1,223 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>Dialog</class>
- <widget class="QDialog" name="Dialog" >
-  <property name="geometry" >
+ <widget class="QDialog" name="Dialog">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>433</width>
+    <height>437</height>
    </rect>
   </property>
-  <property name="windowTitle" >
-   <string>Dialog</string>
+  <property name="windowTitle">
+   <string>T3k Configurator(Factory Edition)</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="T3kCfgFE.qrc">
+    <normaloff>:/T3kCfgFERes/resources/T3kCfgFE.ico</normaloff>:/T3kCfgFERes/resources/T3kCfgFE.ico</iconset>
+  </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(225, 225, 225);</string>
+  </property>
+  <property name="locale">
+   <locale language="English" country="UnitedStates"/>
+  </property>
+  <widget class="QStyleButton" name="btnSelectSensor">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>12</y>
+     <width>143</width>
+     <height>39</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Select Sensor...</string>
+   </property>
+  </widget>
+  <widget class="QStyleButton" name="btnSideview">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>60</y>
+     <width>397</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>1. Sideview...</string>
+   </property>
+  </widget>
+  <widget class="QStyleButton" name="btnDetection">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>122</y>
+     <width>397</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>2. Detection...</string>
+   </property>
+  </widget>
+  <widget class="QStyleButton" name="btnBentAdjustment">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>184</y>
+     <width>397</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>3. Bent Adjustment...</string>
+   </property>
+  </widget>
+  <widget class="QStyleButton" name="btnTouhSetting">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>246</y>
+     <width>397</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>4. Touch Setting...</string>
+   </property>
+  </widget>
+  <widget class="QStyleButton" name="btnReset">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>328</y>
+     <width>122</width>
+     <height>92</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>...</string>
+   </property>
+  </widget>
+  <widget class="QStyleButton" name="btnTouchMark">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>379</y>
+     <width>122</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Touch Mark
+Window...</string>
+   </property>
+  </widget>
+  <widget class="QTextEdit" name="txtEdtDisplayFirmware">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>149</x>
+     <y>328</y>
+     <width>141</width>
+     <height>92</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QTextEdit {
+	border-color: rgb(190, 190, 190);
+	border-style: solid;
+	border-width: 2px;
+	background-color: rgb(240, 240, 240);
+ }</string>
+   </property>
+   <property name="frameShape">
+    <enum>QFrame::NoFrame</enum>
+   </property>
+   <property name="frameShadow">
+    <enum>QFrame::Plain</enum>
+   </property>
+   <property name="horizontalScrollBarPolicy">
+    <enum>Qt::ScrollBarAlwaysOff</enum>
+   </property>
+  </widget>
+  <widget class="QStyleButton" name="btnExit">
+   <property name="geometry">
+    <rect>
+     <x>295</x>
+     <y>328</y>
+     <width>122</width>
+     <height>92</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Exit</string>
+   </property>
+  </widget>
+  <widget class="Line" name="line">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>309</y>
+     <width>397</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
+   </property>
+  </widget>
+  <widget class="QLabel" name="lblSoftlogicInfo">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>12</y>
+     <width>211</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QLabel {
+	color : #403F95;
+	font-weight: bold;
+}</string>
+   </property>
+   <property name="text">
+    <string>*Softlogic detected</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+   </property>
+   <property name="wordWrap">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <zorder>btnSideview</zorder>
+  <zorder>btnSelectSensor</zorder>
+  <zorder>btnDetection</zorder>
+  <zorder>btnBentAdjustment</zorder>
+  <zorder>btnTouhSetting</zorder>
+  <zorder>btnReset</zorder>
+  <zorder>btnTouchMark</zorder>
+  <zorder>txtEdtDisplayFirmware</zorder>
+  <zorder>btnExit</zorder>
+  <zorder>line</zorder>
+  <zorder>lblSoftlogicInfo</zorder>
  </widget>
- <layoutDefault spacing="6" margin="11" />
- <pixmapfunction></pixmapfunction>
- <resources/>
+ <layoutdefault spacing="6" margin="11"/>
+ <customwidgets>
+  <customwidget>
+   <class>QStyleButton</class>
+   <extends>QPushButton</extends>
+   <header>QStyleButton.h</header>
+  </customwidget>
+ </customwidgets>
+ <resources>
+  <include location="T3kCfgFE.qrc"/>
+ </resources>
  <connections/>
 </ui>
